# conecta4

./: .gitignore  pyproject.toml
src/conecta4/: Refactorizar player: setters personalizados.html  __init__.py  board.py  board_test.py  game.py  game_test.py  list_utils.py  list_utils_test.py  main.py  match.py  match_test.py  oracle.py  oracle_test.py  player.py  player_test.py  settings.py
