[project]
name = "conecta4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "galaxar", email = "galaxar.mg@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyfiglet>=1.0.4",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.37.2",
    "ipython>=9.9.0",
    "jupyterlab>=4.5.3",
    "pytest>=9.0.2",
]
